shift menu to left on small screen to prevent scrolling

--- a/assets/style/header.scss
+++ b/assets/style/header.scss
@@ -160,7 +160,7 @@ div#navigation {
 
 .collapse.in {
     position: absolute;
-    right: 0;
+    right: 15px;
     min-width: 200px;
     background-color: $navbar-menu-background-light;
 }
